initial/target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'boolean'", "'break'", "'continue'", 
                     "'else'", "'for'", "'float'", "'if'", "'int'", "'return'", 
                     "'void'", "'do'", "'while'", "'true'", "'false'", "'string'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'!'", "'%'", 
                     "'||'", "'&&'", "'!='", "'=='", "'<'", "'>'", "'<='", 
                     "'>='", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", 
                      "BOOLEANTYPE", "BREAK", "CONTINUE", "ELSE", "FOR", 
                      "FLOATTYPE", "IF", "INTTYPE", "RETURN", "VOIDTYPE", 
                      "DO", "WHILE", "TRUE", "FALSE", "STRINGTYPE", "ID", 
                      "ADD", "SUB", "MUL", "DIV", "NOT", "MOD", "OR", "AND", 
                      "NEQ", "EQ", "LESS", "GRATER", "LEQ", "GEQ", "ASSIGN", 
                      "LP", "RP", "LB", "RB", "LSB", "RSB", "SEMI", "CM", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "WS", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manydecls = 1
    RULE_decl = 2
    RULE_primitive_type = 3
    RULE_variable_decl = 4
    RULE_many_variables = 5
    RULE_variable = 6
    RULE_array = 7
    RULE_function_decl = 8
    RULE_func_type = 9
    RULE_parameter_list = 10
    RULE_parameter_decl = 11
    RULE_var_stmt_list = 12
    RULE_var_stmt = 13
    RULE_array_pointer_type = 14
    RULE_input_array_pointer_type = 15
    RULE_output_array_pointer_type = 16
    RULE_expr = 17
    RULE_expr1 = 18
    RULE_expr2 = 19
    RULE_expr3 = 20
    RULE_expr4 = 21
    RULE_expr5 = 22
    RULE_expr6 = 23
    RULE_expr7 = 24
    RULE_expr8 = 25
    RULE_expr9 = 26
    RULE_operands = 27
    RULE_literal = 28
    RULE_func_call = 29
    RULE_exprlist = 30
    RULE_statement = 31
    RULE_if_stmt = 32
    RULE_dowhile_stmt = 33
    RULE_for_stmt = 34
    RULE_break_stmt = 35
    RULE_continue_stmt = 36
    RULE_return_stmt = 37
    RULE_expr_stmt = 38
    RULE_block_statement = 39

    ruleNames =  [ "program", "manydecls", "decl", "primitive_type", "variable_decl", 
                   "many_variables", "variable", "array", "function_decl", 
                   "func_type", "parameter_list", "parameter_decl", "var_stmt_list", 
                   "var_stmt", "array_pointer_type", "input_array_pointer_type", 
                   "output_array_pointer_type", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "expr9", "operands", "literal", "func_call", "exprlist", 
                   "statement", "if_stmt", "dowhile_stmt", "for_stmt", "break_stmt", 
                   "continue_stmt", "return_stmt", "expr_stmt", "block_statement" ]

    EOF = Token.EOF
    INTLIT=1
    FLOATLIT=2
    BOOLEANLIT=3
    STRINGLIT=4
    BOOLEANTYPE=5
    BREAK=6
    CONTINUE=7
    ELSE=8
    FOR=9
    FLOATTYPE=10
    IF=11
    INTTYPE=12
    RETURN=13
    VOIDTYPE=14
    DO=15
    WHILE=16
    TRUE=17
    FALSE=18
    STRINGTYPE=19
    ID=20
    ADD=21
    SUB=22
    MUL=23
    DIV=24
    NOT=25
    MOD=26
    OR=27
    AND=28
    NEQ=29
    EQ=30
    LESS=31
    GRATER=32
    LEQ=33
    GEQ=34
    ASSIGN=35
    LP=36
    RP=37
    LB=38
    RB=39
    LSB=40
    RSB=41
    SEMI=42
    CM=43
    BLOCK_COMMENT=44
    LINE_COMMENT=45
    WS=46
    ILLEGAL_ESCAPE=47
    UNCLOSE_STRING=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecls(self):
            return self.getTypedRuleContext(MCParser.ManydeclsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.manydecls()
            self.state = 81
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_manydecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydecls" ):
                return visitor.visitManydecls(self)
            else:
                return visitor.visitChildren(self)




    def manydecls(self):

        localctx = MCParser.ManydeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydecls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 83
                self.decl()
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.VOIDTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(MCParser.Variable_declContext,0)


        def function_decl(self):
            return self.getTypedRuleContext(MCParser.Function_declContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.variable_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.function_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def BOOLEANTYPE(self):
            return self.getToken(MCParser.BOOLEANTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primitive_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_type" ):
                return visitor.visitPrimitive_type(self)
            else:
                return visitor.visitChildren(self)




    def primitive_type(self):

        localctx = MCParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.STRINGTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def many_variables(self):
            return self.getTypedRuleContext(MCParser.Many_variablesContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_decl" ):
                return visitor.visitVariable_decl(self)
            else:
                return visitor.visitChildren(self)




    def variable_decl(self):

        localctx = MCParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.primitive_type()
            self.state = 95
            self.many_variables()
            self.state = 96
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_variablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VariableContext)
            else:
                return self.getTypedRuleContext(MCParser.VariableContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_many_variables

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_variables" ):
                return visitor.visitMany_variables(self)
            else:
                return visitor.visitChildren(self)




    def many_variables(self):

        localctx = MCParser.Many_variablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_many_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.variable()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 99
                self.match(MCParser.CM)
                self.state = 100
                self.variable()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def array(self):
            return self.getTypedRuleContext(MCParser.ArrayContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = MCParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MCParser.ID)
            self.state = 111
            self.match(MCParser.LSB)
            self.state = 112
            self.match(MCParser.INTLIT)
            self.state = 113
            self.match(MCParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_type(self):
            return self.getTypedRuleContext(MCParser.Func_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(MCParser.Parameter_listContext,0)


        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_function_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_decl" ):
                return visitor.visitFunction_decl(self)
            else:
                return visitor.visitChildren(self)




    def function_decl(self):

        localctx = MCParser.Function_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.func_type()
            self.state = 116
            self.match(MCParser.ID)
            self.state = 117
            self.match(MCParser.LP)
            self.state = 118
            self.parameter_list()
            self.state = 119
            self.match(MCParser.RP)
            self.state = 120
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def output_array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Output_array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_type" ):
                return visitor.visitFunc_type(self)
            else:
                return visitor.visitChildren(self)




    def func_type(self):

        localctx = MCParser.Func_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_type)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.primitive_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(MCParser.VOIDTYPE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.output_array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Parameter_declContext)
            else:
                return self.getTypedRuleContext(MCParser.Parameter_declContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = MCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.STRINGTYPE))) != 0):
                self.state = 127
                self.parameter_decl()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MCParser.CM:
                    self.state = 128
                    self.match(MCParser.CM)
                    self.state = 129
                    self.parameter_decl()
                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MCParser.Primitive_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def input_array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Input_array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_parameter_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_decl" ):
                return visitor.visitParameter_decl(self)
            else:
                return visitor.visitChildren(self)




    def parameter_decl(self):

        localctx = MCParser.Parameter_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter_decl)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.primitive_type()
                self.state = 138
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.input_array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.Var_stmtContext)
            else:
                return self.getTypedRuleContext(MCParser.Var_stmtContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_var_stmt_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_stmt_list" ):
                return visitor.visitVar_stmt_list(self)
            else:
                return visitor.visitChildren(self)




    def var_stmt_list(self):

        localctx = MCParser.Var_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var_stmt_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.STRINGLIT) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.IF) | (1 << MCParser.INTTYPE) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.ID) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.LP) | (1 << MCParser.LB))) != 0):
                self.state = 143
                self.var_stmt()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.STRINGLIT) | (1 << MCParser.BOOLEANTYPE) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.IF) | (1 << MCParser.INTTYPE) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.ID) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.LP) | (1 << MCParser.LB))) != 0):
                    self.state = 144
                    self.var_stmt()
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_decl(self):
            return self.getTypedRuleContext(MCParser.Variable_declContext,0)


        def statement(self):
            return self.getTypedRuleContext(MCParser.StatementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_var_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_stmt" ):
                return visitor.visitVar_stmt(self)
            else:
                return visitor.visitChildren(self)




    def var_stmt(self):

        localctx = MCParser.Var_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_var_stmt)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEANTYPE, MCParser.FLOATTYPE, MCParser.INTTYPE, MCParser.STRINGTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.variable_decl()
                pass
            elif token in [MCParser.INTLIT, MCParser.FLOATLIT, MCParser.BOOLEANLIT, MCParser.STRINGLIT, MCParser.BREAK, MCParser.CONTINUE, MCParser.FOR, MCParser.IF, MCParser.RETURN, MCParser.DO, MCParser.ID, MCParser.SUB, MCParser.NOT, MCParser.LP, MCParser.LB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_pointer_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Input_array_pointer_typeContext,0)


        def output_array_pointer_type(self):
            return self.getTypedRuleContext(MCParser.Output_array_pointer_typeContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_array_pointer_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_pointer_type" ):
                return visitor.visitArray_pointer_type(self)
            else:
                return visitor.visitChildren(self)




    def array_pointer_type(self):

        localctx = MCParser.Array_pointer_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_array_pointer_type)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.input_array_pointer_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.output_array_pointer_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_array_pointer_typeContext(ParserRuleContext):
